# kea-facedetect

./: CMakeLists.txt  README.md
src/: colormap.cpp  colormap.hpp  kea_face_detection.cpp
